# django-extensible-forms

./: README.md  boundfield.py  fields.py  forms.py  models.py  pyproject.toml  utils.py
bootstrap5/: boundfield.py  forms.py  models.py
django_extensible_forms/: boundfield.py  fields.py  forms.py  models.py  mutators.py  renderers.py  tests.py  utils.py  widgets.py
django_extensible_forms/bootstrap5/: boundfield.py  fields.py  forms.py  models.py  mutators.py  utils.py  widgets.py
django_extensible_forms/bootstrap5/templatetags/: bootstrap5.py
django_extensible_forms/templates/django_extensible_forms/forms/widgets/wrappers/: datalist_wrapper.html
django_extensible_forms/templatetags/: extensible_forms.py
templates/django/forms/: attrs.html
templates/django/forms/widgets/: attrs.html
templates/django_extensible_forms/forms/: div.html
templates/django_extensible_forms/forms/widgets/: range.html
templatetags/: __init__.py  extensible_forms.py
