[build-system]
requires = ["hatchling", "django"]
build-backend = "hatchling.build"

[project]
name = "django-extensible-forms"
version = "1.0"
authors = [
  { name="naggafin", email="nevincoutu@gmail.com" },
]
description = "Sensible form extensions for django."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/naggafin/django-extensible-forms"
"Bug Tracker" = "https://github.com/naggafin/django-extensible-forms/issues"
