[build-system]
requires = ["hatchling", "django"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.pydocstyle]
convention = "pep257"

[project]
name = "django-extensible-forms"
version = "0.9.1"
authors = [
  { name="naggafin", email="nevincoutu@gmail.com" },
]
description = "Sensible form extensions for django."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Framework :: Django",
]
dependencies = [
	"django >= 3.2",
]

[project.urls]
"Homepage" = "https://github.com/naggafin/django-extensible-forms"
"Bug Tracker" = "https://github.com/naggafin/django-extensible-forms/issues"
